manifests/services/jellyfin/middleware.yml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: strip-jellyfin-prefix
  namespace: jellyfin
spec:
  stripPrefix:
    prefixes:
      - /jellyfin
