manifests/services/jellyfin/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyfin
  namespace: jellyfin
  labels:
    app: jellyfin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jellyfin
  template:
    metadata:
      labels:
        app: jellyfin
    spec:
      containers:
        - name: jellyfin
          image: jellyfin/jellyfin:latest
          ports:
            - containerPort: 8096
              name: http
            - containerPort: 8920
              name: https
          volumeMounts:
            - name: config
              mountPath: /config
            - name: cache
              mountPath: /cache
            - name: media
              mountPath: /media
              readOnly: true
            - name: dri
              mountPath: /dev/dri
          securityContext:
            privileged: true
          resources:
            requests:
              memory: "512Mi"
              cpu: "500m"
            limits:
              memory: "12Gi"
              cpu: "4000m"
      volumes:
        - name: config
          emptyDir: {}
        - name: cache
          emptyDir: {}
        - name: media
          persistentVolumeClaim:
            claimName: jellyfin-media-pvc
        - name: dri
          hostPath:
            path: /dev/dri
            type: Directory
